Refactored `ProverThread` for clarity and efficiency in resolution logic
- Renamed variables for consistent naming (`SLEEP_TIME` to `SLEEP_MS`).
- Replaced redundant casts and improved data structure usage in `saveResolvents`.
- Optimized clause resolution loop by switching to `while` and fixing database index decrement.
- Enhanced resolvent saving by ensuring proper batch thresholds are respected.